fixed spacing issues, mainly around logo img and about section

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,3 +1,7 @@
+* {
+    padding-top: 15rem;
+}
+
 .about__container {
     display: grid;
     grid-template-columns: 35% 50%;
