--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -24,7 +24,7 @@
 .service:hover {
     background: transparent;
     border-color: var(--color-primary-variant);
-    curder: default;
+    cursor: default;
 }
 
 .service__head {
@@ -35,7 +35,7 @@
         -moz-border-radius: 0 0 2rem 2rem;
         -ms-border-radius: 0 0 2rem 2rem;
         -o-border-radius: 0 0 2rem 2rem;
-    box-shadow: 0 2rem 1rem rgba[0, 0, 0, 0,1];    
+    box-shadow: 0 2rem 1rem rgba[0, 0, 0, 0.1];    
 }
 
 .service__head > h3 {
@@ -56,7 +56,7 @@
 
 .service__list-icon {
     color: var(--color-primary);
-    margin_top: 2px;
+    margin-top: 2px;
 }
 
 .service__list p {
